--- a/src/app/pages/home/components/product-box/product-box.component.html
+++ b/src/app/pages/home/components/product-box/product-box.component.html
@@ -1,8 +1,8 @@
-<mat-card [ngClass]="{ 'text-center': !fullWidthMode }">
+<mat-card *ngIf="product" [ngClass]="{ 'text-center': !fullWidthMode }">
     <div [ngClass]="{ flex: fullWidthMode }">
         <img
             class="mx-auto h-[200px]"
-            src="https://via.placeholder.com/150"
+            src="{{ product.image }}"
             [ngClass]="{
                 'h-200px': !fullWidthMode,
                 'h-[360px]': fullWidthMode
@@ -13,12 +13,14 @@
             [ngClass]="{ 'px-8 flex flex-col justify-between': fullWidthMode }"
         >
             <div>
-                <h5>Shoes</h5>
-                <p class="truncate whitespace-normal">FAC CACA CA</p>
-                <p *ngIf="fullWidthMode">FACEM DESCRIERI</p>
+                <h5>{{ product.category }}</h5>
+                <p class="truncate hover:whitespace-normal">
+                    {{ product.title }}
+                </p>
+                <p *ngIf="fullWidthMode">{{ product.description }}</p>
             </div>
             <div class="flex justify-between">
-                <span class="text-red-400">{{ "150" | currency }}</span>
+                <span class="text-red-400">{{ product.price | currency }}</span>
                 <button class="relative bottom-1">
                     <mat-icon
                         color="primary"
