--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,15 +6,20 @@
         <app-filters (showCategory)="onShowCategory($event)"></app-filters>
     </mat-drawer>
     <mat-drawer-content class="p-6">
-        <app-products-header (changeLayout)="onLayoutChange($event)">
+        <app-products-header
+            (layoutChange)="onLayoutChange($event)"
+            (itemsCountChange)="onItemsCountChange($event)"
+            (sortChange)="onSortChange($event)"
+        >
         </app-products-header>
         <mat-grid-list
             gutterSize="16"
             [cols]="layoutCols"
             [rowHeight]="layoutRowHeight"
         >
-            <mat-grid-tile>
+            <mat-grid-tile *ngFor="let product of products">
                 <app-product-box
+                    [product]="product"
                     class="w-full"
                     [fullWidthMode]="layoutCols === 1"
                     (addToCart)="onAddToCart($event)"
